# examples

./: .gitignore  .markdownlint.json  .markdownlintignore  Dockerfile  README.md  build.gradle  compose.yaml
.github/: dependabot.yml
iot/esp32-firmware/firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c  mqtt_pub.c  mqtt_pub.h  sensors.c  sensors.h  sme_envelope.c  sme_envelope.h  traceparent.c  traceparent.h  wifi.c  wifi.h
iot/esp32-firmware/sme-bridge/: Dockerfile  main.py  pyproject.toml  telemetry.py
iot/mqtt-trace-propagation/consumer/: main.py  propagation.py  pyproject.toml  telemetry.py
iot/mqtt-trace-propagation/consumer/tests/: test_propagation.py
iot/mqtt-trace-propagation/echo/: Dockerfile  main.py  pyproject.toml
iot/mqtt-trace-propagation/producer/: Dockerfile  main.py  propagation.py  pyproject.toml  telemetry.py
iot/mqtt-trace-propagation/producer/tests/: test_propagation.py
iot/opcua-bridge/bridge/: Dockerfile  main.py  mapper.py  node_map.yaml  pyproject.toml  telemetry.py
iot/sparkplug-bridge/decoder/: Dockerfile  main.py  pyproject.toml  state.py  telemetry.py
python/ai-content-quality/: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  otel-collector-config.yaml  promptfooconfig.yaml  pyproject.toml
python/ai-content-quality/evals/assertions/: improve.js  review.js  score.js
python/ai-content-quality/evals/datasets/: improve_cases.json  review_cases.json  score_cases.json
python/ai-content-quality/prompts/: improve_v1.yaml  review_v1.yaml  review_v2.yaml  score_v1.yaml
python/ai-content-quality/scripts/: test-api.sh  verify-scout.sh
python/ai-content-quality/src/content_quality/: config.py  main.py  pii.py  telemetry.py
python/ai-content-quality/tests/: conftest.py  test_analyzer.py  test_api.py  test_llm.py  test_middleware.py  test_models.py  test_pii.py  test_prompts.py  test_telemetry.py
python/ai-sales-intelligence/: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  otel-collector-config.yaml  pyproject.toml
python/ai-sales-intelligence/config/: prompts.yaml
python/ai-sales-intelligence/dashboards/: DESIGN.md  operational.json  strategic.json
python/ai-sales-intelligence/data/: sample-connections-verify-scout.csv  sample-connections.csv
python/ai-sales-intelligence/scripts/: print-prospects.py  test-api.sh  verify-scout.sh
python/ai-sales-intelligence/src/sales_intelligence/: config.py  database.py  graph.py  llm.py  main.py  models.py  parsing.py  pii.py  prompts.py  state.py  telemetry.py
python/ai-sales-intelligence/tests/: conftest.py  test_api.py  test_config.py  test_llm.py  test_parsing.py  test_pii.py  test_research.py  test_state.py
python/django-postgres/: .env.example  .env.local  .env.test  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  pyproject.toml  requirements.txt
python/django-postgres/apps/articles/: models.py  serializers.py  urls.py  views.py
python/django-postgres/apps/core/: apps.py  exceptions.py  middleware.py  telemetry.py  urls.py  views.py
python/django-postgres/apps/jobs/: tasks.py
python/django-postgres/apps/users/: authentication.py  models.py  serializers.py  urls.py  views.py
python/django-postgres/config/: celery.py  otel-config.yaml  settings.py  urls.py  wsgi.py
python/django-postgres/scripts/: test-api.sh  verify-scout.sh
python/django-postgres/tests/: conftest.py  test_articles.py  test_users.py
python/fastapi-celery-postgres/: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  pyproject.toml
python/fastapi-celery-postgres/app/: config.py  database.py  main.py  models.py  schemas.py  tasks.py
python/fastapi-celery-postgres/config/: otel-config.yaml
python/fastapi-celery-postgres/scripts/: init-monitoring-user.sql  rabbitmq.sh  test-api.sh  verify-scout.sh
python/fastapi-celery-postgres/tests/: conftest.py  test_tasks_api.py
python/fastapi-postgres/: .env.example  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  pyproject.toml  requirements.txt
python/fastapi-postgres/app/: MetricsMiddleware.py  config.py  database.py  main.py  models.py  oauth2.py  schemas.py  telemetry.py  utils.py
python/fastapi-postgres/config/: otel-config.yaml
python/fastapi-postgres/scripts/: test-api.sh  verify-scout.sh
python/fastapi-postgres/tests/: conftest.py  test_auth.py  test_posts.py  test_users.py
python/flask-postgres/: .env.example  .env.local  .env.test  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  pyproject.toml  requirements.txt  wsgi.py
python/flask-postgres/app/: __init__.py  config.py  errors.py  extensions.py  telemetry.py
python/flask-postgres/config/: otel-config.yaml
python/flask-postgres/scripts/: test-api.sh  verify-scout.sh
python/flask-postgres/tests/: conftest.py  test_articles.py  test_auth.py
python/litestar-postgres/app/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
python/litestar-postgres/notify/: Dockerfile  pyproject.toml
rust/ai-report-generator/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  compose.yml
rust/ai-report-generator/config/: otel-collector-config.yaml
rust/ai-report-generator/data/: schema-context.txt
rust/ai-report-generator/db/: schema.sql  seed.sql
rust/ai-report-generator/scripts/: test-api.sh  verify-scout.sh
rust/ai-report-generator/src/: config.rs  error.rs  main.rs
rust/axum-postgres/: .env.example  .gitignore  Cargo.toml  Dockerfile.worker  Makefile  README.md  compose.yaml  compose.yml
rust/axum-postgres/config/: otel-config.yaml
rust/axum-postgres/migrations/: 20260106000001_initial.sql
rust/axum-postgres/scripts/: test-api.sh  verify-scout.sh
rust/axum-postgres/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs
rust/hello-world/: Cargo.toml  Makefile  README.md
rust/hello-world/src/: main.rs
scout-collector/docker/celery-demo/: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  rabbit-config.json  rabbitmq.conf
(+1794 files in other folders)
