[project]
name = "fastapi-celery-postgres"
version = "0.1.0"
description = "FastAPI + Celery + PostgreSQL OpenTelemetry example"
authors = [
    {name = "Irfan Shah",email = "irfns@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "uvicorn[standard] (>=0.41.0,<1.0.0)",
    "fastapi (>=0.133.1,<1.0.0)",
    "celery (>=5.6.0,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-environ (>=0.4.54,<0.5.0)",
    "opentelemetry-distro (>=0.60b1)",
    "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)",
    "opentelemetry-instrumentation-celery (>=0.60b1)",
    "opentelemetry-instrumentation-fastapi (>=0.60b1)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.60b1)",
    "opentelemetry-instrumentation-redis (>=0.60b1)",
    "opentelemetry-instrumentation-logging (>=0.60b1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"