[package]
name = "ai-report-generator"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
description = "AI-powered economic report generator with OpenTelemetry observability"
license = "MIT"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "request-id"] }

# Async Runtime
tokio = { version = "1", features = ["full", "tracing"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json"
]}

# LLM Providers
async-openai = { version = "0.33", features = ["chat-completion"] }
reqwest = { version = "0.12", features = ["json"] }

# OpenTelemetry — match rust/axum-postgres versions
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "logs", "metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace", "logs", "metrics"] }
opentelemetry-appender-tracing = "0.31.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
