[project]
name = "sme-bridge"
version = "0.1.0"
description = "Scout MCU Envelope (SME-v1) to OTLP bridge"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt>=2.1",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
]

[tool.uv]
package = false
