[project]
name = "mqtt-trace-consumer"
version = "0.1.0"
description = "Subscribes to MQTT readings, continues the producer's trace, and calls a downstream HTTP service"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt==2.1.0",
    "requests==2.34.2",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
    "opentelemetry-instrumentation-requests==0.63b1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
