[project]
name = "mqtt-trace-echo"
version = "0.1.0"
description = "Downstream HTTP service proving trace context continues past the MQTT hop"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "opentelemetry-distro==0.63b1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
    "opentelemetry-instrumentation-fastapi==0.63b1",
]

[tool.uv]
package = false
