[project]
name = "sparkplug-decoder"
version = "0.1.0"
description = "Sparkplug B to OTLP decoder bridge"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt>=2.1",
    "protobuf>=6.31.1,<7",
    "grpcio-tools>=1.80",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
]

[tool.uv]
package = false
