[project]
name = "litestar-notify"
version = "0.1.0"
description = "Notification microservice that receives article-created events"
requires-python = ">=3.14"
dependencies = [
    "litestar[standard]==2.21.1",
    "msgspec==0.21.1",
    "python-json-logger==4.1.0",
    # OpenTelemetry — SDK + auto-instrumentation
    "opentelemetry-api==1.41.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-exporter-otlp==1.41.0",
    "opentelemetry-distro==0.62b0",
    "opentelemetry-instrumentation==0.62b0",
    "opentelemetry-instrumentation-asgi==0.62b0",
    "opentelemetry-instrumentation-logging==0.62b0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
