[project]
name = "celery-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Irfan Shah",email = "irfns@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "opentelemetry-instrumentation-celery (>=0.51b0,<0.52)",
    "opentelemetry-api (>=1.30.0,<2.0.0)",
    "opentelemetry-sdk (>=1.30.0,<2.0.0)",
    "opentelemetry-exporter-otlp (>=1.30.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)",
    "python-environ (>=0.4.54,<0.5.0)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.51b0,<0.52)",
    "opentelemetry-instrumentation-redis (>=0.51b0,<0.52)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"